fix stretch

--- a/source/sass/blocks/dummy.scss
+++ b/source/sass/blocks/dummy.scss
@@ -65,7 +65,7 @@
     background-color: $white;
     border-radius: 60px;
     font-size: 2.8rem;
-    font-weight: 600;
+    font-weight: 700;
     color: $red;
     line-height: 1.3;
 
@@ -103,7 +103,7 @@
     right: 0;
     font-size: 2.8rem;
     line-height: 1.3;
-    font-weight: 600;
+    font-weight: 700;
     max-width: 52rem;
 
     @media (max-width: $tablet) {
@@ -144,7 +144,7 @@
     font-size: 2rem;
     line-height: 1.2;
     max-width: 92.7rem;
-    font-weight: 600;
+    font-weight: 700;
 
     @media (max-width: $mobile) {
       font-size: 1.6rem;
