--- a/source/sass/utils/global.scss
+++ b/source/sass/utils/global.scss
@@ -28,6 +28,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   min-height: 100vh;
+  font-stretch: 120%;
 //   padding-top: 9.2rem;
 
   @media (max-width: $laptop) {
